--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.2.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mdi/font": "^7.2.96",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
